--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.11",
+    "mongoose-unique-validator": "^2.0.3",
+    "mongoose-validator": "^0.2.2",
+    "underscore": "^1.12.0"
   }
 }
